Prevent embed element overflow on mobile.

--- a/assets/style/main.css
+++ b/assets/style/main.css
@@ -14,6 +14,10 @@ body {
 	padding-top: 32px;
 }
 
+iframe {
+	max-width: 100%;
+}
+
 .header {
 	background: #fffcff;
 	border-bottom: 3px solid #e0e0e0;
